unpackaged/main/default/objects/NCM_Content__c/NCM_Content__c.object-meta.xml
<CustomObject>
    <description>This object houses records representing NCM content that is used for Instittute or engagements or trainings, et al.</description>
    <label>NCM Content</label>
    <nameField>
        <label>NCM Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCM Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>