unpackaged/main/default/objects/NCM_Content__c/fields/Area_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Focus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area of Focus</label>
    <referenceTo>Area_of_Focus__c</referenceTo>
    <relationshipLabel>NCM Content</relationshipLabel>
    <relationshipName>NCM_Content</relationshipName>
    <type>Lookup</type>
</CustomField>