unpackaged/main/default/objects/NCM_Content__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Management Executive Program</fullName>
            </value>
            <value>
                <fullName>Dealer Executive Program</fullName>
            </value>
            <value>
                <fullName>General Management I</fullName>
            </value>
            <value>
                <fullName>General Management II</fullName>
            </value>
            <value>
                <fullName>Financial Management I</fullName>
            </value>
            <value>
                <fullName>Financial Management II</fullName>
            </value>
            <value>
                <fullName>Effective Leadership</fullName>
            </value>
            <value>
                <fullName>Hiring Top Talent</fullName>
            </value>
            <value>
                <fullName>Success-Driven Pay Plans</fullName>
            </value>
            <value>
                <fullName>A GM&#39;s Guide to Service &amp; Parts</fullName>
            </value>
            <value>
                <fullName>General Sales Management I</fullName>
            </value>
            <value>
                <fullName>General Sales Management II</fullName>
            </value>
            <value>
                <fullName>General Sales Management III</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Management I</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Management II</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Management III</fullName>
            </value>
            <value>
                <fullName>Mastering the Digital Marketplace</fullName>
            </value>
            <value>
                <fullName>Internet/BDC Operations</fullName>
            </value>
            <value>
                <fullName>Desking &amp; F&amp;I Integration</fullName>
            </value>
            <value>
                <fullName>BHPH Collections</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Used Car Management</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Service Management</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Parts Management</fullName>
            </value>
            <value>
                <fullName>Service Advisor Training</fullName>
            </value>
            <value>
                <fullName>Service Management I</fullName>
            </value>
            <value>
                <fullName>Service Management II</fullName>
            </value>
            <value>
                <fullName>Service Management IIII</fullName>
            </value>
            <value>
                <fullName>Parts Management I</fullName>
            </value>
            <value>
                <fullName>Parts Management II</fullName>
            </value>
            <value>
                <fullName>Express Service I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>