unpackaged/main/default/objects/NCM_Content__c/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>