unpackaged/main/default/objects/NCM_Content__c/fields/NCMContentID_18__c.field-meta.xml
<CustomField>
    <fullName>NCMContentID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMContentID (18)</label>
    <type>Text</type>
</CustomField>