unpackaged/main/default/objects/NCM_Content__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCM_Content</relationshipName>
    <type>Lookup</type>
</CustomField>