unpackaged/main/default/objects/NCM_Content__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Management</fullName>
            </value>
            <value>
                <fullName>Financial Management</fullName>
            </value>
            <value>
                <fullName>Leadership Summit</fullName>
            </value>
            <value>
                <fullName>General Sales Management</fullName>
            </value>
            <value>
                <fullName>Used Vehicle Management</fullName>
            </value>
            <value>
                <fullName>Fundamentals</fullName>
            </value>
            <value>
                <fullName>Service Management</fullName>
            </value>
            <value>
                <fullName>Parts Management</fullName>
            </value>
            <value>
                <fullName>Express Service Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>