unpackaged/main/default/objects/NCM_Content__c/recordTypes/Consulting.recordType-meta.xml
<RecordType>
    <fullName>Consulting</fullName>
    <active>true</active>
    <description>Consulting specific content</description>
    <label>Consulting</label>
</RecordType>