unpackaged/main/default/objects/NCM_Content__c/recordTypes/Institute.recordType-meta.xml
<RecordType>
    <fullName>Institute</fullName>
    <active>true</active>
    <description>Institute specific content</description>
    <label>Institute</label>
</RecordType>