unpackaged/main/default/objects/NCM_Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discipline__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>